@@ -18,21 +18,23 @@ import java.util.Map;
 import java.util.Set;
 import java.util.TreeMap;
 import java.util.concurrent.ConcurrentHashMap;
+import java.util.logging.Logger;
 import java.util.regex.Pattern;
 
 /**
  * It's a Maven Client that can be compiled before Maven is available.
- * At runtime it retrieves just the Maven client libraries (from Eclipse project)
+ * At runtime, it retrieves just the Maven client libraries (from Eclipse project)
  * from the repository configured at the root {@code build.gradle}.
  * Then, it loads these libraries into a child classloader, and reflectively calls into them.
  */
 public final class MavenClient {
+    private final Logger LOG = Logger.getLogger(MavenClient.class.getName());
     private final AfterClientLib libClient;
     private final Map<String, Path> cache = new ConcurrentHashMap<>();
 
     public static MavenClient loadClient(Path baizelRoot) throws IOException {
         var repositories = BeforeClientLib.getRepositories(baizelRoot);
-        var mavenClientLibDependencies = BeforeClientLib.resolveMavenClientLibDependencies(baizelRoot, repositories.getFirst());
+        var mavenClientLibDependencies = BeforeClientLib.resolveMavenClientLibDependencies(baizelRoot, repositories.get(0));
         var dynamicLibs = DynamicClassLoader.forPaths(mavenClientLibDependencies, MavenClient.class);
         var libClient = AfterClientLib.load(repositories.stream().map(BeforeClientLib::url).toList(), dynamicLibs);
         return new MavenClient(libClient);
@@ -43,6 +45,7 @@ public final class MavenClient {
         if (jarPath == null) {
             jarPath = libClient.resolveCoords(coordinates);
             cache.put(coordinates, jarPath);
+            LOG.info("resolved library -- { \"coordinates\": \"" + coordinates + "\", \"jarPath\": \"" + jarPath + "\" }");
         }
         return jarPath;
     }
@@ -178,7 +181,7 @@ public final class MavenClient {
         }
 
         // DefaultRepositorySystemSession, RepositorySystem
-        private static Object getSession(Object repositorySystem, DynamicClassLoader libs) {
+        private static Object getSession(Object repositorySystem, DynamicClassLoader<?> libs) {
             var session = libs.invoke("org.apache.maven.repository.internal.MavenRepositorySystemUtils", "newSession");
             var localRepositoryPath = Path.of(System.getProperty("user.home"), ".m2/repository");
             var localRepository = libs.requireConstruct("org.eclipse.aether.repository.LocalRepository", localRepositoryPath.toFile());
@@ -187,7 +190,7 @@ public final class MavenClient {
             return session;
         }
 
-        private static Object getRepository(URL url, DynamicClassLoader libs) { // RemoteRepository
+        private static Object getRepository(URL url, DynamicClassLoader<?> libs) { // RemoteRepository
             return libs.requireInvoke(libs.requireConstruct("org.eclipse.aether.repository.RemoteRepository$Builder",
                     null,
                     "default",
@@ -195,7 +198,7 @@ public final class MavenClient {
             ), "build");
         }
 
-        private static Object getRepositorySystem(DynamicClassLoader libs) {
+        private static Object getRepositorySystem(DynamicClassLoader<?> libs) {
             var locator = libs.requireInvoke("org.apache.maven.repository.internal.MavenRepositorySystemUtils", "newServiceLocator");
             var registry = getServiceRegistry(libs);
             for (var entry : registry.entrySet()) {
@@ -212,6 +215,44 @@ public final class MavenClient {
             var serviceRegistry = new TreeMap<Class<?>, Set<Class<?>>>(Comparator.comparing(Class::getCanonicalName));
             serviceRegistry.put(libs.forName("org.eclipse.aether.spi.connector.RepositoryConnectorFactory"), Set.of(libs.forName("org.eclipse.aether.connector.basic.BasicRepositoryConnectorFactory")));
             serviceRegistry.put(libs.forName("org.eclipse.aether.spi.connector.transport.TransporterFactory"), Set.of(libs.forName("org.eclipse.aether.transport.file.FileTransporterFactory"), libs.forName("org.eclipse.aether.transport.http.HttpTransporterFactory")));
+            
+            
+            // defensive
+            serviceRegistry.put(libs.forName("org.apache.maven.repository.internal.ModelCacheFactory"), Set.of(libs.forName("org.apache.maven.repository.internal.DefaultModelCacheFactory")));
+            serviceRegistry.put(libs.forName("org.eclipse.aether.RepositorySystem"), Set.of(libs.forName("org.eclipse.aether.internal.impl.DefaultRepositorySystem")));
+            serviceRegistry.put(libs.forName("org.eclipse.aether.impl.ArtifactDescriptorReader"), Set.of(libs.forName("org.apache.maven.repository.internal.DefaultArtifactDescriptorReader")));
+            serviceRegistry.put(libs.forName("org.eclipse.aether.impl.ArtifactResolver"), Set.of(libs.forName("org.eclipse.aether.internal.impl.DefaultArtifactResolver")));
+            serviceRegistry.put(libs.forName("org.eclipse.aether.impl.DependencyCollector"), Set.of(libs.forName("org.eclipse.aether.internal.impl.collect.DefaultDependencyCollector")));
+            serviceRegistry.put(libs.forName("org.eclipse.aether.impl.Deployer"), Set.of(libs.forName("org.eclipse.aether.internal.impl.DefaultDeployer")));
+            serviceRegistry.put(libs.forName("org.eclipse.aether.impl.Installer"), Set.of(libs.forName("org.eclipse.aether.internal.impl.DefaultInstaller")));
+            serviceRegistry.put(libs.forName("org.eclipse.aether.impl.LocalRepositoryProvider"), Set.of(libs.forName("org.eclipse.aether.internal.impl.DefaultLocalRepositoryProvider")));
+            serviceRegistry.put(libs.forName("org.eclipse.aether.impl.MetadataGeneratorFactory"), Set.of(libs.forName("org.apache.maven.repository.internal.SnapshotMetadataGeneratorFactory"), libs.forName("org.apache.maven.repository.internal.VersionsMetadataGeneratorFactory")));
+            serviceRegistry.put(libs.forName("org.eclipse.aether.impl.MetadataResolver"), Set.of(libs.forName("org.eclipse.aether.internal.impl.DefaultMetadataResolver")));
+            serviceRegistry.put(libs.forName("org.eclipse.aether.impl.OfflineController"), Set.of(libs.forName("org.eclipse.aether.internal.impl.DefaultOfflineController")));
+            serviceRegistry.put(libs.forName("org.eclipse.aether.impl.RemoteRepositoryFilterManager"), Set.of(libs.forName("org.eclipse.aether.internal.impl.filter.DefaultRemoteRepositoryFilterManager")));
+            serviceRegistry.put(libs.forName("org.eclipse.aether.impl.RemoteRepositoryManager"), Set.of(libs.forName("org.eclipse.aether.internal.impl.DefaultRemoteRepositoryManager")));
+            serviceRegistry.put(libs.forName("org.eclipse.aether.impl.RepositoryConnectorProvider"), Set.of(libs.forName("org.eclipse.aether.internal.impl.DefaultRepositoryConnectorProvider")));
+            serviceRegistry.put(libs.forName("org.eclipse.aether.impl.RepositoryEventDispatcher"), Set.of(libs.forName("org.eclipse.aether.internal.impl.DefaultRepositoryEventDispatcher")));
+            serviceRegistry.put(libs.forName("org.eclipse.aether.impl.RepositorySystemLifecycle"), Set.of(libs.forName("org.eclipse.aether.internal.impl.DefaultRepositorySystemLifecycle")));
+            serviceRegistry.put(libs.forName("org.eclipse.aether.impl.SyncContextFactory"), Set.of(libs.forName("org.eclipse.aether.internal.impl.synccontext.legacy.DefaultSyncContextFactory")));
+            serviceRegistry.put(libs.forName("org.eclipse.aether.impl.UpdateCheckManager"), Set.of(libs.forName("org.eclipse.aether.internal.impl.DefaultUpdateCheckManager")));
+            serviceRegistry.put(libs.forName("org.eclipse.aether.impl.UpdatePolicyAnalyzer"), Set.of(libs.forName("org.eclipse.aether.internal.impl.DefaultUpdatePolicyAnalyzer")));
+            serviceRegistry.put(libs.forName("org.eclipse.aether.impl.VersionRangeResolver"), Set.of(libs.forName("org.apache.maven.repository.internal.DefaultVersionRangeResolver")));
+            serviceRegistry.put(libs.forName("org.eclipse.aether.impl.VersionResolver"), Set.of(libs.forName("org.apache.maven.repository.internal.DefaultVersionResolver")));
+            serviceRegistry.put(libs.forName("org.eclipse.aether.internal.impl.LocalPathComposer"), Set.of(libs.forName("org.eclipse.aether.internal.impl.DefaultLocalPathComposer")));
+            serviceRegistry.put(libs.forName("org.eclipse.aether.internal.impl.TrackingFileManager"), Set.of(libs.forName("org.eclipse.aether.internal.impl.DefaultTrackingFileManager")));
+            serviceRegistry.put(libs.forName("org.eclipse.aether.internal.impl.synccontext.named.NamedLockFactoryAdapterFactory"), Set.of(libs.forName("org.eclipse.aether.internal.impl.synccontext.named.NamedLockFactoryAdapterFactoryImpl")));
+            serviceRegistry.put(libs.forName("org.eclipse.aether.spi.connector.checksum.ChecksumAlgorithmFactorySelector"), Set.of(libs.forName("org.eclipse.aether.internal.impl.checksum.DefaultChecksumAlgorithmFactorySelector")));
+            serviceRegistry.put(libs.forName("org.eclipse.aether.spi.connector.checksum.ChecksumPolicyProvider"), Set.of(libs.forName("org.eclipse.aether.internal.impl.DefaultChecksumPolicyProvider")));
+            serviceRegistry.put(libs.forName("org.eclipse.aether.spi.connector.layout.RepositoryLayoutFactory"), Set.of(libs.forName("org.eclipse.aether.internal.impl.Maven2RepositoryLayoutFactory")));
+            serviceRegistry.put(libs.forName("org.eclipse.aether.spi.connector.layout.RepositoryLayoutProvider"), Set.of(libs.forName("org.eclipse.aether.internal.impl.DefaultRepositoryLayoutProvider")));
+            serviceRegistry.put(libs.forName("org.eclipse.aether.spi.connector.transport.TransporterProvider"), Set.of(libs.forName("org.eclipse.aether.internal.impl.DefaultTransporterProvider")));
+            serviceRegistry.put(libs.forName("org.eclipse.aether.spi.io.FileProcessor"), Set.of(libs.forName("org.eclipse.aether.internal.impl.DefaultFileProcessor")));
+            serviceRegistry.put(libs.forName("org.eclipse.aether.spi.localrepo.LocalRepositoryManagerFactory"), Set.of(libs.forName("org.eclipse.aether.internal.impl.SimpleLocalRepositoryManagerFactory"), libs.forName("org.eclipse.aether.internal.impl.EnhancedLocalRepositoryManagerFactory")));
+            serviceRegistry.put(libs.forName("org.eclipse.aether.spi.log.LoggerFactory"), Set.of(libs.forName("org.eclipse.aether.internal.impl.slf4j.Slf4jLoggerFactory")));
+            serviceRegistry.put(libs.forName("org.eclipse.aether.spi.synccontext.SyncContextFactory"), Set.of(libs.forName("org.eclipse.aether.internal.impl.synccontext.DefaultSyncContextFactory")));
+
+
             return serviceRegistry;
         }
     }
